sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:10: error: not found: value inverse
			inverse = true
                        ^AlgCocktailSort2:17: error: not found: value inverse
				inverse = true
                                ^AlgCocktailSort2:22: error: not found: value inverse
	while ( inverse )	
                ^